--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 pandas = "^2.2.3"
 matplotlib = "^3.10.1"
 scipy = "^1.15.2"
+scikit-learn = "^1.6.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
